# VoiceExpenseTracker

./: .env_temp  .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
integration_test/: app_test.dart  directory_access_integration_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: category.dart  expense.dart  time_period.dart
lib/services/: ai_agent_service.dart  ai_service.dart  android_speech_recognition_service.dart  app_lifecycle_service.dart  config_service.dart  database_service.dart  ios_speech_recognition_service.dart  offline_sherpa_service.dart  sherpa_model_service.dart  sherpa_onnx_service.dart  speech_recognition_factory.dart  speech_recognition_service.dart  speech_service.dart  system_download_helper.dart  text_ai_service.dart  webdav_service.dart
lib/ui/screens/: add_expense_screen.dart  home_screen.dart  settings_screen.dart  sherpa_test_screen.dart  splash_screen.dart  statistics_screen.dart  text_input_test_screen.dart  vehicle_expense_detail_screen.dart  (+1 more)
lib/utils/: ai_prompts.dart  sherpa_utils.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: directory_access_test.dart  directory_access_test.mocks.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
